--- a/main.html
+++ b/main.html
@@ -30,9 +30,8 @@
 
 <div class="box">
 
-<h2 style="color:black;">Project 1</h2>
 
-<h1 style="color:black;">Jessica Prakash</h1>
+<h1 style="color:black;">A Land Far Away - Jessica Prakash</h1>
 
 <p style="color:black;">For project 1, I focused on using the symbolism of butterflies flying in a new land to demonstrate the impact of finally finding peace after entering a dream-like world that many have 
 searched for all their lives. A Land Far Away signifies finally finding freedom in a new land, living a better life and moving forward. In nature, many animals have struggled and 
