--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@ The open field of grass, trees, flowers and bright blue sky allow them to explor
 and the land they found to portray the beauty of escaping struggles, living dreams and entering a new place to call home.
 </p>
 
-
+<a href="https://jessicaprakash.github.io/ART-107-Project-1/">A Land Far Away</a>
 
 
 
